--- a/localConfig.properties
+++ b/localConfig.properties
@@ -2,3 +2,12 @@ url=https://interview-prep-test.herokuapp.com
 browser=chrome
 testUserPassword=dGVzdHVzZXIxMjM=
 adminUserPassword=YWRtaW51c2VyMTIz
+
+
+#--------- Saucelabs config ----------
+
+runInSaucelabs=true
+sauceUser=timbaltla2021
+sauceKey=03e05b3f-f630-4e4d-acee-454122a6dd72
+browser_version=88
+os=Windows 10
